--- a/WEather.html
+++ b/WEather.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+<meta charset="UTF-8">
+<title>Page Title</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<link rel="stylesheet" href="">
+<style>
+</style>
+<script src=""></script>
+<body>
+
 <div id="ww_99cf321ed0809" v='1.3' loc='auto' a='{"t":"horizontal","lang":"en","sl_lpl":1,"ids":[],"font":"Arial","sl_ics":"one","sl_sot":"celsius","cl_bkg":"image","cl_font":"#FFFFFF","cl_cloud":"#FFFFFF","cl_persp":"#81D4FA","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'><a href="https://weatherwidget.org/pl/" id="ww_99cf321ed0809_u" target="_blank">Bezpłatny Widget Pogodowy dla Witryny</a></div><script async src="https://app1.weatherwidget.org/js/?id=ww_99cf321ed0809"></script>
+
+</body>
+</html>
